--- a/index.jade
+++ b/index.jade
@@ -25,7 +25,7 @@ html(lang="pl")
             a(href="") link
           
     section.lel
-      h2 Jakiś zajebisty slogan
+      h2 no to powiedzmy, że zjebałem
       address
         a(href="tel:533114559") who u gonna call
         
