--- a/css/style.css
+++ b/css/style.css
@@ -1,170 +1,99 @@
-::-moz-selection {
-  background: rgba(0, 0, 0, 0.3);
-}
-
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,latin-ext";
 ::selection {
-  background: rgba(0, 0, 0, 0.3);
-}
+  background: rgba(0, 0, 0, 0.3); }
 
-li {
-  list-style: none;
-}
-
-body {
-  font-family: "Open Sans", Arial, Helvetica sans-serif;
-  text-rendering: optimizeLegibility;
-  text-rendering: geometricPrecision;
-  background: #041113;
-}
-
-*, *:before, *:after {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: none;
-}
+  border: none; }
 
-*:before, *:after {
-  content: "";
-}
+*::before, *::after {
+  content: ""; }
 
-* {
+*, *:active, *:visited {
   text-decoration: none;
   font-style: normal;
-  color: #fff;
-}
-
-li {
-  list-style: none;
-}
+  color: #fff; }
 
 body {
   font-family: "Open Sans", Arial, Helvetica sans-serif;
   text-rendering: optimizeLegibility;
-  text-rendering: geometricPrecision;
-  background: #041113;
-}
+  text-rendering: geometricPrecision; }
 
-.flex, .center, header section:nth-child(2), header address, header, header section:nth-child(1) nav ul {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
+li {
+  list-style: none; }
 
-.center, header section:nth-child(2), header address {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.flex, .center-x, .center, body header section:nth-child(2), body header section:nth-child(2) address a, .center-y, body header, body header section:nth-child(1) nav ul {
+  display: flex; }
+
+.row {
+  flex-direction: row; }
+
+.column, .center-x, .center, body header section:nth-child(2), body header section:nth-child(2) address a, .center-y, body header {
+  flex-direction: column; }
+
+.center-x, .center, body header section:nth-child(2), body header section:nth-child(2) address a {
   text-align: center;
-}
+  align-items: center; }
 
-.column, header, header section:nth-child(2), header address {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
+.center-y, .center, body header section:nth-child(2), body header section:nth-child(2) address a {
+  justify-content: center;
+  height: 100%; }
 
-header {
-  background: #333333;
-  height: 61.8vh;
-}
-header section:nth-child(1) {
-  background: #0d383d;
-  height: 12%;
-}
-header section:nth-child(2) {
-  background: url(../gx/unnamed.jpg);
-  background-size: cover;
-  height: 88%;
-  position: relative;
-}
-header section:nth-child(2) h2 {
-  position: relative;
-  top: -1.1vh;
-  font-size: 6vh;
-  font-weight: 300;
-  color: #f7f7f7;
-  z-index: 2;
-  text-transform: uppercase;
-  margin: 4.4vh;
-}
-header section.lel:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: url(../gx/noise.png);
-  z-index: 1;
-}
-header address {
-  z-index: 2;
-  background: #a70b0b;
-  height: 20vh;
-  width: 20vh
-  /*a
-   * position: relative
-   * top: -2.2vh
-   * background: $accent1
-   * padding: 10vh 2.2vh
-   * font-size: 2.2vh
-   * border-radius: 2px
-   * border-radius: 10vh
-   * height: 22.2vh
-   * transition: all ease-in-out 100ms
-   *
-   * /*&:hover
-   *   border-radius: 10vh
-   *   color: rgba(255, 255, 255, 0)
-   *   font-size: 2vh
-   *   padding: 10vh
-   *   top: 4.4vh */
-}
-header address a {
-  display: block;
-  position: relative;
-}
+.center-x-noflex {
+  text-align: center; }
 
-main {
-  background: #fbfbfb;
-}
-main section {
-  padding: 4%;
-}
-main h3 {
-  font-weight: 300;
-  font-size: 4.4vh;
-}
-main p {
-  padding-top: 4.4vh;
-}
-main h3, main p {
-  color: #404040;
-}
-main section:nth-child(even) {
-  background: #f7f7f7;
-}
+section address a {
+  transition: all ease-in-out 250ms; }
 
-footer {
-  background: #0d383d;
-  padding: 4%;
-}
+body {
+  background: #f2f2f2; }
+  body header {
+    background: #0d383d;
+    height: 61.8vh; }
+    body header::before {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 88.176%;
+      background: url(../gx/noise.png);
+      z-index: 1; }
+    body header section:nth-child(1) {
+      background: #114b52;
+      height: 12vh; }
+    body header section:nth-child(2) {
+      background: url(../gx/unnamed.jpg);
+      background-size: cover; }
+      body header section:nth-child(2) h2 {
+        font-weight: 300;
+        font-size: 10vw;
+        z-index: 2; }
+      body header section:nth-child(2) address {
+        z-index: 2; }
+        body header section:nth-child(2) address a {
+          height: 20vh;
+          width: 20vh;
+          padding: 2vh;
+          background: #a70b0b;
+          border-radius: 50%; }
+          body header section:nth-child(2) address a:hover {
+            background: #8f0909; }
 
 @media screen and (orientation: landscape) {
-  header {
+  body header {
     height: 90vh;
-  }
-
-  main section {
-    padding: 5% 29% 4% 29%;
-  }
-  main section p {
-    font-size: 126%;
-  }
-}
+    position: relative; }
+    body header::after {
+      position: absolute;
+      bottom: -10vh;
+      left: 0;
+      right: 0;
+      height: 10vh;
+      background: #6ad3df; }
+    body header section:nth-child(2) h2 {
+      font-size: 10vh;
+      max-width: 80%; } }
 
 /*# sourceMappingURL=style.css.map */
