--- a/css/style.sass
+++ b/css/style.sass
@@ -1,111 +1,56 @@
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,latin-ext"
 @import variables
 @import resocialize
 @import boxxy
+@import locomotionapparatus
 
+body
+  background: darken($color, 5%)
 
-header
-  @extend .flex
-  @extend .column
-  background: darken($color, $alot)
-  height: $ratio-large * 100vh
-
-  section:nth-child(1)
-    background: $accent0
-    height: $ratio2-small * 100%
-
-    nav
-      ul
-        @extend .flex
-
-  section:nth-child(2)
-    background: url(../gx/unnamed.jpg)
-    background-size: cover
-    height: $ratio2-large * 100%
-    @extend .center
-    @extend .column
-    position: relative
-
-    h2
-      position: relative
-      top: -1.1vh
-      font-size: 6vh
-      font-weight: 300
-      color: darken($color, 3%)
-      z-index: 2
-      text-transform: uppercase
-      margin: 4.4vh
-
-  section.lel:before
-    position: absolute
-    top: 0
-    bottom: 0
-    left: 0
-    right: 0
-    background: url(../gx/noise.png)
-    z-index: 1
-
-
-  address
-    z-index: 2
-    background: $accent1
-    height: 20vh
-    width: 20vh
-    @extend .center
-    @extend .column
-
-
-    a
-      display: block
-      position: relative
-
-    /*a
-      position: relative
-      top: -2.2vh
-      background: $accent1
-      padding: 10vh 2.2vh
-      font-size: 2.2vh
-      border-radius: 2px
-      border-radius: 10vh
-      height: 22.2vh
-      transition: all ease-in-out 100ms
-
-      /*&:hover
-        border-radius: 10vh
-        color: rgba(255, 255, 255, 0)
-        font-size: 2vh
-        padding: 10vh
-        top: 4.4vh
-
-main
-  background: darken($color, 1.5%)
-
-  section
-    padding: 4%
-
-  h3
-    font-weight: 300
-    font-size: 4.4vh
-
-  p
-    padding-top: 4.4vh
-
-  h3, p
-    color: darken($color, 75%)
-
-  section:nth-child(even)
-    background: darken($color, 3%)
-
-footer
-  background: $accent0
-  padding: 4%
-
-@media screen and (orientation : landscape)
   header
-    height: 90vh
+    @extend .flex, .column
+    background: $accent0
+    height: $golden-large * 100vh
 
-  main
-    section
-      padding: 5% 29% 4% 29%
+    &::before
+      position: absolute
+      left: 0
+      bottom: 0
+      width: 100%
+      height: $ratio2-large * 100.2%
+      background: url(../gx/noise.png)
+      z-index: 1
 
-      p
-        font-size: 126%
+    section:nth-child(1)
+      background: lighten($accent0, 5%)
+      height: $ratio2-small * 100vh
+
+
+
+      nav
+        ul
+          @extend .flex
+
+    section:nth-child(2)
+      @extend .center
+      background: url(../gx/unnamed.jpg)
+      background-size: cover
+
+      h2
+        font-weight: 300
+        font-size: 10vw
+        z-index: 2
+
+      address
+        z-index: 2
+        a
+          @extend .center
+          height: 20vh
+          width: 20vh
+          padding: 2vh
+          background: $accent1
+          border-radius: 50%
+
+          &:hover
+            background: darken($accent1, 5%)
+@import rwd
