--- a/index.jade
+++ b/index.jade
@@ -5,14 +5,13 @@ html(lang="pl")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", type="text/css", href="css/style.css")
-    link(rel='stylesheet', type="text/css", href="https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,latin-ext")
 
     title u wot
   
   body
   
-  header
-    section  
+  header  
+    section
       nav
         ul
           li
@@ -24,8 +23,8 @@ html(lang="pl")
           li
             a(href="") link
           
-    section.lel
-      h2 no to powiedzmy, że zjebałę
+    section
+      h2 no to powiedzmy, że już bez przekleństw
       address
         a(href="tel:533114559") who u gonna call
         
@@ -43,6 +42,6 @@ html(lang="pl")
       h3 Lorem lorem lorem lorem
       p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-  footer jakieś gowno
+  footer ladne zdanie
 
   
