--- a/css/resocialize_css.sass
+++ b/css/resocialize_css.sass
@@ -22,6 +22,9 @@
   font-style: normal
   color: $global-font-color
 
+*
+  position: relative
+
 body
   font-family: $font
   text-rendering: optimizeLegibility
