--- a/css/variables.sass
+++ b/css/variables.sass
@@ -21,6 +21,6 @@ $ratio2-large: 0.88
 $color: #fff
 $color1: #000
 $global-font-color: #fff
-$accent0: #0d383d
-$accent1: #a70b0b
+$accent0: #1d4649
+$accent1: #be362f
 $bl: rgba(0,0,0,0.3)
