--- a/css/rwd.sass
+++ b/css/rwd.sass
@@ -1,7 +1,13 @@
-@media screen and (orientation : landscape)
+@media all and (orientation : landscape)
+
+  .re-flex
+    display: flex
+
   body
+    height: 200vh
+
     header
-      height: 90vh
+      height: 100vh
       position: relative
 
       &::before
@@ -10,13 +16,25 @@
         bottom: 0
 
       &::after
+        content: "skroluj!"
         position: absolute
-        bottom: -10vh
-        left: 0
+        bottom: 0
         right: 0
         height: 10vh
-        background: lighten($accent0, 50%)
+        width: 20%
+        background: #000
 
-      section:nth-child(2)
+      section
         h2
-          font-size: 10vh
+          font-size: 8vh
+          max-width: 60%
+
+    main
+      section
+        @extend .re-flex
+        padding: 0 20%
+
+    footer
+      @extend .re-flex
+      background: lighten(black, 10%)
+      z-index: 9
