--- a/css/style.sass
+++ b/css/style.sass
@@ -8,7 +8,6 @@ body
 
   header
     @extend .flex, .column
-    background: $accent0
     height: $golden-large * 100vh
 
     &::before
@@ -18,31 +17,32 @@ body
       width: 100%
       height: $golden-large * 84.2%
       background: url(../gx/noise.png)
+      opacity: 0.1
       z-index: 1
 
-    section:nth-child(1)
+    nav
       background: lighten($accent0, 5%)
       height: $ratio2-small * 100vh
+      position: fixed
+      width: 100%
       z-index: 3
-
-      nav
-        ul
-          @extend .flex
-          width: 80%
-          position: relative
-          right: -20%
-          li
-            height: 12vh
+      ul
+        @extend .flex
+        width: 80%
+        position: relative
+        right: -20%
+        li
+          height: 12vh
+          width: 100%
+          a
+            @extend .flex, .center
+            background: black
             width: 100%
-            a
-              @extend .flex, .center
-              background: black
-              width: 100%
 
-              &:hover
-                background: lighten(black, 20%)
+            &:hover
+              background: lighten(black, 20%)
 
-    section:nth-child(2)
+    section
       @extend .center
       background: url(../gx/unnamed.jpg)
       background-size: cover
@@ -52,8 +52,10 @@ body
         font-size: 8vw
         max-width: 80%
         z-index: 2
+        bottom: -12vh
 
       address
+        @extend .flex
         z-index: 2
         a
           @extend .center, .circle
@@ -61,15 +63,41 @@ body
           width: 20vh
           padding: 2vh
           background: $accent1
+          bottom: -22vh
+
+        a[href^="tel"]
+          box-shadow: 0 0 300px 0 #000, 0 0 300px 0 #000, 0 0 300px 0 #000
 
           &:hover
             background: darken($accent1, 5%)
 
+        a[href^="mailto"]
+          background: #365f42
+          width: 10vh
+          height: 10vh
+          bottom: -27vh
+          z-index: 3
+
+
+          &:hover
+            background: darken($accent1, 5%)
+
+        a[href^="dunno"]
+          background: #5b49a0
+          width: 10vh
+          height: 10vh
+          bottom: -27vh
+          z-index: 3
+
+          &:hover
+            background: darken($accent1, 5%)
+
+
   main
     background: darken($color, 10%)
-
+    z-index: 4
     *, *:active
-      color: black
+      color: #2b2b2b
     section
       h3
         padding: 8% 4% 4% 4%
@@ -83,7 +111,7 @@ body
           padding: 4%
 
   footer
-    background: black
+    background: #2b2b2b
     padding: 4%
 
 
