--- a/css/resocialize_css.sass
+++ b/css/resocialize_css.sass
@@ -20,7 +20,7 @@
 *, *:active, *:visited
   text-decoration: none
   font-style: normal
-  color: $global-font-color
+  color: $color
 
 *
   position: relative
