--- a/css/rwd.sass
+++ b/css/rwd.sass
@@ -8,26 +8,14 @@
 
     header
       height: 100vh
-      position: relative
-
-      &::before
-        position: absolute
-        height: $ratio2-large * 100.3%
-        bottom: 0
-
-      &::after
-        content: "skroluj!"
-        position: absolute
-        bottom: 0
-        right: 0
-        height: 10vh
-        width: 20%
-        background: #000
 
       section
         h2
           font-size: 8vh
           max-width: 60%
+
+        address
+          bottom: 0
 
     main
       section
