--- a/css/variables.sass
+++ b/css/variables.sass
@@ -17,10 +17,59 @@ $ratio2-small: 0.12
 $ratio2-large: 0.88
 
 // color scheme
+$amount: 10%
 
 $color: #fff
 $color1: #000
-$global-font-color: #fff
 $accent0: #1d4649
 $accent1: #be362f
 $bl: rgba(0,0,0,0.3)
+
+$red: #e54941
+$red2: #be362f
+$orange: #e47c2e
+$orange2: #d15216
+$yellow: #fecc2c
+$yellow2: #fda725
+$sand: #f0deb6
+$sand2: #d5c297
+$navy: #35495d
+$navy2: #2d3e4f
+$black: #2b2b2b
+$black2: #262626
+$magenta: #9a59b4
+$magenta2: #8d44ab
+$teal: #3c6f80
+$teal2: #376271
+$sky: #3a99d9
+$sky2: #2e81b7
+$green: #39cc74
+$green2: #31ae63
+$mint: #29bc9c
+$mint2: #23a085
+$white: #ecf0f1
+$white2: #bdc3c7
+$gray: #95a5a6
+$gray2: #7f8c8d
+$wetgreen: #365f42
+$wetgreen2: #2e5037
+$purple: #745fc3
+$purle2: #5b49a0
+$brown: #5d4535
+$brown2: #503b2d
+$plum: #5d345d
+$plum2: #4e2b4e
+$wmelon: #ed6f7b
+$wmelon2: #d7525b
+$lime: #a6c645
+$lime2: #8fb02f
+$pink: #f27bc2
+$pink2: #d25b9d
+$maroon: #782f2c
+$maroon2: #652522
+$coffee: #a28672
+$coffe2: #8d725f
+$pony: #b9c9f0
+$pony2: #9aabd4
+$blue:#51669f
+$blue2: #3a4d80
