--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,20 @@ body {
 li {
   list-style: none; }
 
-.flex, .center-x, .center, body header nav ul li a, body header section, body header section address a, .center-y, body header, body header nav ul, body header section address {
+.flex, .center-x, .center, body header nav ul li a, body header section, body header section h2, body header section address a, .center-y, body header, body header nav ul, body header section address {
   display: flex; }
 
 .row {
   flex-direction: row; }
 
-.column, .center-x, .center, body header nav ul li a, body header section, body header section address a, .center-y, body header {
+.column, .center-x, .center, body header nav ul li a, body header section, body header section h2, body header section address a, .center-y, body header {
   flex-direction: column; }
 
-.center-x, .center, body header nav ul li a, body header section, body header section address a {
+.center-x, .center, body header nav ul li a, body header section, body header section h2, body header section address a {
   text-align: center;
   align-items: center; }
 
-.center-y, .center, body header nav ul li a, body header section, body header section address a {
+.center-y, .center, body header nav ul li a, body header section, body header section h2, body header section address a {
   justify-content: center;
   height: 100%; }
 
@@ -54,21 +54,12 @@ body {
   background: #f2f2f2; }
   body header {
     height: 61.8vh; }
-    body header::before {
-      position: absolute;
-      left: 0;
-      bottom: 38.582%;
-      width: 100%;
-      height: 52.0356%;
-      background: url(../gx/noise.png);
-      opacity: 0.1;
-      z-index: 1; }
     body header nav {
-      background: #24585b;
+      background: #1d4649;
       height: 12vh;
       position: fixed;
       width: 100%;
-      z-index: 3; }
+      z-index: 8888; }
       body header nav ul {
         width: 80%;
         position: relative;
@@ -77,53 +68,72 @@ body {
           height: 12vh;
           width: 100%; }
           body header nav ul li a {
-            background: black;
+            background: #000;
             width: 100%; }
             body header nav ul li a:hover {
-              background: #333333; }
+              background: #262626; }
     body header section {
-      background: url(../gx/unnamed.jpg);
-      background-size: cover; }
+      background: url("../gx/unnamed.jpg");
+      background-size: cover;
+      position: fixed;
+      left: 0;
+      right: 0; }
       body header section h2 {
+        height: 100%;
         font-weight: 300;
         font-size: 8vw;
         max-width: 80%;
-        z-index: 2;
-        bottom: -12vh; }
+        text-shadow: 0 0 100px 0 #000, 0 0 200px 0 #000, 0 0 300px 0 #000;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: default; }
+        @media all and (orientation: portrait) {
+          body header section h2 {
+            top: -14vh; } }
       body header section address {
-        z-index: 2; }
+        justify-content: center;
+        position: absolute;
+        bottom: 38.2vh;
+        left: 0;
+        right: 0; }
         body header section address a {
-          height: 20vh;
-          width: 20vh;
+          height: 16vh;
+          width: 16vh;
           padding: 2vh;
-          background: #be362f;
-          bottom: -22vh; }
+          background: #e54941;
+          z-index: 3; }
         body header section address a[href^="tel"] {
-          box-shadow: 0 0 300px 0 #000, 0 0 300px 0 #000, 0 0 300px 0 #000; }
-          body header section address a[href^="tel"]:hover {
-            background: #aa302a; }
+          box-shadow: 0 0 300px 0 #000, 0 0 300px 0 #000, 0 0 300px 0 #000;
+          top: -2vh;
+          z-index: 3; }
+          body header section address a[href^="tel"]:hover, body header section address a[href^="tel"]:active {
+            background: #be362f; }
         body header section address a[href^="mailto"] {
           background: #365f42;
-          width: 10vh;
-          height: 10vh;
-          bottom: -27vh;
-          z-index: 3; }
-          body header section address a[href^="mailto"]:hover {
-            background: #aa302a; }
+          width: 8vh;
+          height: 8vh;
+          top: 2vh;
+          z-index: 4; }
+          body header section address a[href^="mailto"]:hover, body header section address a[href^="mailto"]:active {
+            background: #2e5037; }
         body header section address a[href^="dunno"] {
-          background: #5b49a0;
-          width: 10vh;
-          height: 10vh;
-          bottom: -27vh;
-          z-index: 3; }
-          body header section address a[href^="dunno"]:hover {
-            background: #aa302a; }
+          background: #745fc3;
+          width: 8vh;
+          height: 8vh;
+          top: 2vh;
+          z-index: 4; }
+          body header section address a[href^="dunno"]:hover, body header section address a[href^="dunno"]:active {
+            background: #5b49a0; }
   body main {
     background: #e6e6e6;
     z-index: 4; }
     body main *, body main *:active {
       color: #2b2b2b; }
-    body main section h3 {
+    body main section h3, body main section h4 {
       padding: 8% 4% 4% 4%;
       font-size: 200%;
       font-weight: 300; }
@@ -144,23 +154,12 @@ body {
   body {
     height: 200vh; }
     body header {
-      height: 100vh;
-      position: relative; }
-      body header::before {
-        position: absolute;
-        height: 88.264%;
-        bottom: 0; }
-      body header::after {
-        content: "skroluj!";
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        height: 10vh;
-        width: 20%;
-        background: #000; }
+      height: 100vh; }
       body header section h2 {
         font-size: 8vh;
         max-width: 60%; }
+      body header section address {
+        bottom: 0; }
     body main section {
       padding: 0 20%; }
     body footer {
