--- a/css/style.sass
+++ b/css/style.sass
@@ -10,96 +10,109 @@ body
     @extend .flex, .column
     height: $golden-large * 100vh
 
-    &::before
-      position: absolute
-      left: 0
-      bottom: $golden-small + $golden-small * 100%
-      width: 100%
-      height: $golden-large * 84.2%
-      background: url(../gx/noise.png)
-      opacity: 0.1
-      z-index: 1
-
     nav
-      background: lighten($accent0, 5%)
+      background: $accent0
       height: $ratio2-small * 100vh
       position: fixed
       width: 100%
-      z-index: 3
+      z-index: 8888
+
       ul
         @extend .flex
         width: 80%
         position: relative
         right: -20%
+
         li
           height: 12vh
           width: 100%
+
           a
             @extend .flex, .center
-            background: black
+            background: $color1
             width: 100%
 
             &:hover
-              background: lighten(black, 20%)
+              background: $black2
 
     section
       @extend .center
-      background: url(../gx/unnamed.jpg)
+      background: url('../gx/unnamed.jpg')
       background-size: cover
+      position: fixed
+      left: 0
+      right: 0
 
       h2
+        @extend .flex, .center
+        height: 100%
         font-weight: 300
         font-size: 8vw
         max-width: 80%
-        z-index: 2
-        bottom: -12vh
+        text-shadow: 0 0 100px 0 $color1, 0 0 200px 0 $color1, 0 0 300px 0 $color1
+        -webkit-touch-callout: none
+        -webkit-user-select: none
+        -khtml-user-select: none
+        -moz-user-select: none
+        -ms-user-select: none
+        user-select: none
+        cursor: default
+        @media all and (orientation : portrait)
+          top: -14vh
 
       address
         @extend .flex
-        z-index: 2
+        justify-content: center
+        position: absolute
+        bottom: $golden-small * 100vh
+        left: 0
+        right: 0
         a
           @extend .center, .circle
-          height: 20vh
-          width: 20vh
+          height: 16vh
+          width: 16vh
           padding: 2vh
-          background: $accent1
-          bottom: -22vh
+          background: $red
+          z-index: 3
+
 
         a[href^="tel"]
-          box-shadow: 0 0 300px 0 #000, 0 0 300px 0 #000, 0 0 300px 0 #000
+          box-shadow: 0 0 300px 0 $color1, 0 0 300px 0 $color1, 0 0 300px 0 $color1
+          top: -2vh
+          z-index: 3
 
-          &:hover
-            background: darken($accent1, 5%)
+          &:hover, &:active
+            background: $red2
 
         a[href^="mailto"]
-          background: #365f42
-          width: 10vh
-          height: 10vh
-          bottom: -27vh
-          z-index: 3
+          background: $wetgreen
+          width: 8vh
+          height: 8vh
+          top: 2vh
+          z-index: 4
 
 
-          &:hover
-            background: darken($accent1, 5%)
+          &:hover, &:active
+            background: $wetgreen2
 
         a[href^="dunno"]
-          background: #5b49a0
-          width: 10vh
-          height: 10vh
-          bottom: -27vh
-          z-index: 3
+          background: $purple
+          width: 8vh
+          height: 8vh
+          top: 2vh
+          z-index: 4
 
-          &:hover
-            background: darken($accent1, 5%)
+          &:hover, &:active
+            background: $purle2
 
 
   main
     background: darken($color, 10%)
     z-index: 4
     *, *:active
-      color: #2b2b2b
+      color: $black
     section
-      h3
+      h3, h4
         padding: 8% 4% 4% 4%
         font-size: 200%
         font-weight: 300
@@ -111,7 +124,7 @@ body
           padding: 4%
 
   footer
-    background: #2b2b2b
+    background: $black
     padding: 4%
 
 
