--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,8 @@ html(lang="pl")
     title u wot
   
   body  
-    header  
+    header
+      figure(title="logo")
       nav
         ul
           li
