--- a/css/resocialize_css.sass
+++ b/css/resocialize_css.sass
@@ -32,3 +32,12 @@ body
 
 li
   list-style: none
+
+.no-select
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+  cursor: default
